microservices/consumer-service/deployment/k8s/app-pagos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-service
  namespace: consumidor-pagos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-service
  template:
    metadata:
      labels:
        app: consumer-service
        flow: no-monetario
        layer: composicion
    spec:
      containers:
        - name: consumer-service
          image: consumer-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
