microservices/consumer-service/deployment/k8s/netpol.yaml
# 1. El Muro (Default Deny): Bloquea todo por defecto
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-ns
  namespace: transversales
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
# 2. La Puerta de Entrada: Permite tráfico desde el Ingress Gateway de Istio
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-ingress-gateway
  namespace: transversales
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              istio: ingressgateway
---
# 3. La Llave por Flujos: Permite consumo interno según labels de "flow"
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: permitir-consumo-interno-flujos
  namespace: transversales # <-- ¡Asegúrate de que el namespace coincida!
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {} # Permite desde cualquier namespace...
          podSelector: # ...siempre que el pod tenga estos labels
            matchExpressions:
              - key: flow
                operator: In
                values:
                  - monetario
                  - no-monetario
                  - operativo
